--- a/reports/Extent_23_September_2020.html
+++ b/reports/Extent_23_September_2020.html
@@ -46,7 +46,7 @@
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<li>
                 <a href='#!'>
-                    <span class='label suite-start-time blue darken-3'>Sep 23, 2020 06:59:56 PM</span>
+                    <span class='label suite-start-time blue darken-3'>Sep 23, 2020 10:21:53 PM</span>
 				</a>
 			</li>
 			<li>
@@ -141,7 +141,7 @@
 					<span class='tooltipped' data-position='top' data-tooltip='0%'><span class='strong'>0</span> step(s) passed</span>
 				</div>
 				<div class='block text-small'>
-					<span class='strong tooltipped' data-position='top' data-tooltip='9.091%'>1</span> step(s) failed, <span class='strong tooltipped' data-position='top' data-tooltip='90.909%'>10</span> others
+					<span class='strong tooltipped' data-position='top' data-tooltip='20%'>1</span> step(s) failed, <span class='strong tooltipped' data-position='top' data-tooltip='80%'>4</span> others
 				</div>
 			</div>
 		</div>
@@ -158,15 +158,15 @@
 				
 				<li class='test displayed active  fail' status='fail' bdd='false' test-id='1'>
 					<div class='test-heading'>
-						<span class='test-name'>com.cpcommunity.testScripts.community.TC205_Tenant_Admin_Create_Community</span>
-						<span class='test-time'>Sep 23, 2020 07:00:00 PM</span>
+						<span class='test-name'>com.cpcommunity.testScripts.community.TC210_TA_Update_The_Community_Details</span>
+						<span class='test-time'>Sep 23, 2020 10:21:57 PM</span>
 						<span class='test-status right fail'>fail</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Sep 23, 2020 07:00:00 PM</span>
-	<span class='label end-time'>Sep 23, 2020 07:05:28 PM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 5m 28s+402ms</span>
+	<span class='label start-time'>Sep 23, 2020 10:21:57 PM</span>
+	<span class='label end-time'>Sep 23, 2020 10:24:31 PM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 2m 33s+229ms</span>
 </div>
 	<div class='test-steps'>
 		<table class='bordered table-results'>
@@ -180,57 +180,27 @@
 			<tbody>
 				<tr class='log' status='info'>
 					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-					<td class='timestamp'>7:00:51 PM</td>
+					<td class='timestamp'>10:22:53 PM</td>
 					<td class='step-details'>Launched Browser : chrome</td>
 				</tr>
 				<tr class='log' status='info'>
 					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-					<td class='timestamp'>7:01:51 PM</td>
-					<td class='step-details'><b><font color=yellow>Screenshot of new Page Navigation</font></b><img data-featherlight='b0cc7885bbea7ccc7cb7d0065e848121Wed_Sep_23_19_01_50_IST_2020.jpg' width='10%' src='b0cc7885bbea7ccc7cb7d0065e848121Wed_Sep_23_19_01_50_IST_2020.jpg' data-src='b0cc7885bbea7ccc7cb7d0065e848121Wed_Sep_23_19_01_50_IST_2020.jpg'></td>
+					<td class='timestamp'>10:24:00 PM</td>
+					<td class='step-details'><b><font color=yellow>Screenshot of new Page Navigation</font></b><img data-featherlight='e72c34aefafeb27d6284b86550860867Wed_Sep_23_22_23_58_IST_2020.jpg' width='10%' src='e72c34aefafeb27d6284b86550860867Wed_Sep_23_22_23_58_IST_2020.jpg' data-src='e72c34aefafeb27d6284b86550860867Wed_Sep_23_22_23_58_IST_2020.jpg'></td>
 				</tr>
 				<tr class='log' status='info'>
 					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-					<td class='timestamp'>7:01:59 PM</td>
+					<td class='timestamp'>10:24:08 PM</td>
 					<td class='step-details'>Clicking on : LOGIN</td>
-				</tr>
-				<tr class='log' status='info'>
-					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-					<td class='timestamp'>7:02:15 PM</td>
-					<td class='step-details'><b><font color=yellow>Screenshot of new Page Navigation</font></b><img data-featherlight='b0cc7885bbea7ccc7cb7d0065e848121Wed_Sep_23_19_02_15_IST_2020.jpg' width='10%' src='b0cc7885bbea7ccc7cb7d0065e848121Wed_Sep_23_19_02_15_IST_2020.jpg' data-src='b0cc7885bbea7ccc7cb7d0065e848121Wed_Sep_23_19_02_15_IST_2020.jpg'></td>
-				</tr>
-				<tr class='log' status='info'>
-					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-					<td class='timestamp'>7:02:20 PM</td>
-					<td class='step-details'>Typing in : email address entered the value as : connectproem@gmail.com</td>
-				</tr>
-				<tr class='log' status='info'>
-					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-					<td class='timestamp'>7:02:21 PM</td>
-					<td class='step-details'>Typing in : password entered the value as : Admin@123</td>
-				</tr>
-				<tr class='log' status='info'>
-					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-					<td class='timestamp'>7:02:21 PM</td>
-					<td class='step-details'>Clicking on : Login</td>
-				</tr>
-				<tr class='log' status='info'>
-					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-					<td class='timestamp'>7:02:38 PM</td>
-					<td class='step-details'><b><font color=yellow>Screenshot of new Page Navigation</font></b><img data-featherlight='b0cc7885bbea7ccc7cb7d0065e848121Wed_Sep_23_19_02_37_IST_2020.jpg' width='10%' src='b0cc7885bbea7ccc7cb7d0065e848121Wed_Sep_23_19_02_37_IST_2020.jpg' data-src='b0cc7885bbea7ccc7cb7d0065e848121Wed_Sep_23_19_02_37_IST_2020.jpg'></td>
-				</tr>
-				<tr class='log' status='info'>
-					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-					<td class='timestamp'>7:02:43 PM</td>
-					<td class='step-details'>Clicking on : Communities</td>
 				</tr>
 				<tr class='log' status='fail'>
 					<td class='status fail' title='fail' alt='fail'><i class='material-icons'>cancel</i></td>
-					<td class='timestamp'>7:05:28 PM</td>
-					<td class='step-details'><details><summary><b><font color=red>Exception Occured:Click to see</font></b ></summary>[sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)<br> sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)<br> sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)<br> java.lang.reflect.Method.invoke(Method.java:498)<br> org.openqa.selenium.support.pagefactory.internal.LocatingElementHandler.invoke(LocatingElementHandler.java:51)<br> com.sun.proxy.$Proxy11.isDisplayed(Unknown Source)<br> org.openqa.selenium.support.ui.ExpectedConditions.elementIfVisible(ExpectedConditions.java:315)<br> org.openqa.selenium.support.ui.ExpectedConditions.access$100(ExpectedConditions.java:44)<br> org.openqa.selenium.support.ui.ExpectedConditions$10.apply(ExpectedConditions.java:301)<br> org.openqa.selenium.support.ui.ExpectedConditions$10.apply(ExpectedConditions.java:298)<br> org.openqa.selenium.support.ui.FluentWait.until(FluentWait.java:260)<br> com.cpcommunity.PageObjects.BasePage.waitForElementToPresent(BasePage.java:171)<br> com.cpcommunity.PageObjects.SystemAdminDashboardPage.navigateToCommunitiesPage(SystemAdminDashboardPage.java:85)<br> com.cpcommunity.testScripts.community.TC205_Tenant_Admin_Create_Community.TC205(TC205_Tenant_Admin_Create_Community.java:34)<br> sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)<br> sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)<br> sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)<br> java.lang.reflect.Method.invoke(Method.java:498)<br> org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:108)<br> org.testng.internal.Invoker.invokeMethod(Invoker.java:661)<br> org.testng.internal.Invoker.invokeTestMethod(Invoker.java:869)<br> org.testng.internal.Invoker.invokeTestMethods(Invoker.java:1193)<br> org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:126)<br> org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:109)<br> java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1149)<br> java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:624)<br> java.lang.Thread.run(Thread.java:748)]</details></td>
+					<td class='timestamp'>10:24:31 PM</td>
+					<td class='step-details'><details><summary><b><font color=red>Exception Occured:Click to see</font></b ></summary>[sun.reflect.GeneratedConstructorAccessor29.newInstance(Unknown Source)<br> sun.reflect.DelegatingConstructorAccessorImpl.newInstance(DelegatingConstructorAccessorImpl.java:45)<br> java.lang.reflect.Constructor.newInstance(Constructor.java:423)<br> org.openqa.selenium.remote.ErrorHandler.createThrowable(ErrorHandler.java:214)<br> org.openqa.selenium.remote.ErrorHandler.throwIfResponseFailed(ErrorHandler.java:166)<br> org.openqa.selenium.remote.http.JsonHttpResponseCodec.reconstructValue(JsonHttpResponseCodec.java:40)<br> org.openqa.selenium.remote.http.AbstractHttpResponseCodec.decode(AbstractHttpResponseCodec.java:80)<br> org.openqa.selenium.remote.http.AbstractHttpResponseCodec.decode(AbstractHttpResponseCodec.java:44)<br> org.openqa.selenium.remote.HttpCommandExecutor.execute(HttpCommandExecutor.java:158)<br> org.openqa.selenium.remote.service.DriverCommandExecutor.execute(DriverCommandExecutor.java:83)<br> org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:548)<br> org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:322)<br> org.openqa.selenium.remote.RemoteWebDriver.findElementByXPath(RemoteWebDriver.java:424)<br> org.openqa.selenium.By$ByXPath.findElement(By.java:353)<br> org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:314)<br> org.openqa.selenium.support.pagefactory.DefaultElementLocator.findElement(DefaultElementLocator.java:69)<br> org.openqa.selenium.support.pagefactory.AjaxElementLocator.access$001(AjaxElementLocator.java:39)<br> org.openqa.selenium.support.pagefactory.AjaxElementLocator$SlowLoadingElement.isLoaded(AjaxElementLocator.java:194)<br> org.openqa.selenium.support.ui.SlowLoadableComponent.get(SlowLoadableComponent.java:57)<br> org.openqa.selenium.support.pagefactory.AjaxElementLocator.findElement(AjaxElementLocator.java:119)<br> org.openqa.selenium.support.pagefactory.internal.LocatingElementHandler.invoke(LocatingElementHandler.java:38)<br> com.sun.proxy.$Proxy11.toString(Unknown Source)<br> java.lang.String.valueOf(String.java:2994)<br> java.lang.StringBuilder.append(StringBuilder.java:131)<br> org.openqa.selenium.support.ui.ExpectedConditions$10.toString(ExpectedConditions.java:306)<br> java.lang.String.valueOf(String.java:2994)<br> java.lang.StringBuilder.append(StringBuilder.java:131)<br> org.openqa.selenium.support.ui.FluentWait.until(FluentWait.java:279)<br> com.cpcommunity.PageObjects.BasePage.waitForPageToLoad(BasePage.java:90)<br> com.cpcommunity.PageObjects.BasePage.openPage(BasePage.java:76)<br> com.cpcommunity.PageObjects.HomePage.clickOnLOGINBtn(HomePage.java:67)<br> com.cpcommunity.testScripts.community.TC210_TA_Update_The_Community_Details.TC210(TC210_TA_Update_The_Community_Details.java:32)<br> sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)<br> sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)<br> sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)<br> java.lang.reflect.Method.invoke(Method.java:498)<br> org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:108)<br> org.testng.internal.Invoker.invokeMethod(Invoker.java:661)<br> org.testng.internal.Invoker.invokeTestMethod(Invoker.java:869)<br> org.testng.internal.Invoker.invokeTestMethods(Invoker.java:1193)<br> org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:126)<br> org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:109)<br> java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1149)<br> java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:624)<br> java.lang.Thread.run(Thread.java:748)]</details></td>
 				</tr>
 				<tr class='log' status='info'>
 					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-					<td class='timestamp'>7:05:28 PM</td>
+					<td class='timestamp'>10:24:31 PM</td>
 					<td class='step-details'>TC205 Test Completed</td>
 				</tr>
 			</tbody>
@@ -279,25 +249,25 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Steps
-					<div class='panel-lead'>11</div>
+					<div class='panel-lead'>5</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>Sep 23, 2020 06:59:56 PM</div>
+					<div class='panel-lead'>Sep 23, 2020 10:21:53 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>Sep 23, 2020 07:05:30 PM</div>
+			 		<div class='panel-lead'>Sep 23, 2020 10:24:31 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>0h 5m 33s+668ms</div>
+					<div class='panel-lead'>0h 2m 38s+982ms</div>
 				</div>
 			</div>
 			<div class='col s4'>
@@ -352,7 +322,7 @@
 				errorChild: 0,
 				warningChild: 0,
 				skipChild: 0,
-				infoChild: 10,
+				infoChild: 4,
 				exceptionsChild: 1,
 				
 				passGrandChild: 0,
